<resources>
    <string name="app_name">NewsApp</string>
    <string name="favorites">Favorite News</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="general">General</string>
    <string name="health">Health</string>
    <string name="science">Science</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>
    <string name="AllCategory">AllCategory</string>
    <string name="description">Description</string>
    <string name="link">link</string>
    <string name="language">language</string>
    <string name="name">name</string>
    <string name="country">country</string>
    <string name="category">category</string>
    <string name="nameNews">News</string>
    <string name="about">About</string>
    <string name="id">id</string>
    <string name="FavoriteNews">FavoriteNews</string>
    <string name="Articles">Articles</string>
    <string name="News">News</string>
    <string name="Category">Category: </string>
    <string name="howToAbleFavorites">To see your favorite news SignIn with your google account</string>
    <string name="ableFavorites">Here is your favorite News</string>


</resources>