<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="com.example.ui.MainScreen"
        android:label="@string/app_name"
        tools:layout="@layout/main_fragment">
        <action
            android:id="@+id/action_articleScreen"
            app:destination="@id/articleScreen" />
        <action
            android:id="@+id/action_favorite"
            app:destination="@id/favoritesScreen" />
    </fragment>

    <fragment
        android:id="@+id/articleScreen"
        android:name="com.example.ui.ArticleScreen"
        android:label="@string/Articles"
        tools:layout="@layout/article_screen_fragment">
        <argument
            android:name="category"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/favoritesScreen"
        android:name="com.example.ui.FavoritesScreen"
        android:label="@string/FavoriteNews"
        tools:layout="@layout/favorites_screen_fragment">

    </fragment>

</navigation>