<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginBottom="@dimen/buttom">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/secondaryLightColor"
        android:visibility="visible">

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="265dp"
            android:layout_height="100dp"
            android:layout_marginStart="5dp"
            android:background="@color/secondaryColor"
            android:gravity="center"
            android:text="@string/description"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/SmallText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.82" />

        <TextView
            android:id="@+id/tv_link"
            android:layout_width="131dp"
            android:layout_height="19dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:gravity="left|center_vertical"
            android:text="@string/link"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/linkTextSize"
            app:layout_constraintBottom_toBottomOf="@+id/tv_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/tv_description"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/tv_category"
            android:layout_width="132dp"
            android:layout_height="38dp"
            android:layout_marginEnd="5dp"
            android:gravity="center|left"
            android:text="@string/category"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/SmallText"
            app:layout_constraintBottom_toTopOf="@+id/tv_country"
            app:layout_constraintEnd_toEndOf="@+id/tv_link"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_country"
            app:layout_constraintTop_toTopOf="@+id/tv_name"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_country"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_marginTop="12dp"
            android:gravity="left|center_vertical"
            android:text="@string/country"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/SmallText"
            app:layout_constraintEnd_toEndOf="@+id/tv_language"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_language"
            app:layout_constraintTop_toTopOf="@+id/tv_description" />

        <TextView
            android:id="@+id/tv_language"
            android:layout_width="85dp"
            android:layout_height="30dp"
            android:gravity="left|center_vertical"
            android:text="@string/language"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/SmallText"
            app:layout_constraintBottom_toTopOf="@+id/tv_link"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_link"
            app:layout_constraintTop_toBottomOf="@+id/tv_country"
            app:layout_constraintVertical_bias="0.565" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="265dp"
            android:layout_height="32dp"
            android:layout_marginTop="5dp"
            android:background="@color/secondaryColor"
            android:gravity="center"
            android:text="@string/name"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/MediumText"
            app:layout_constraintBottom_toTopOf="@+id/tv_description"
            app:layout_constraintEnd_toEndOf="@+id/tv_description"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_description"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <CheckBox
            android:id="@+id/cb_isFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/selecor_wishlist_item"
            app:layout_constraintBottom_toTopOf="@+id/tv_link"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_country"
            app:layout_constraintTop_toBottomOf="@+id/tv_category"
            app:layout_constraintVertical_bias="0.381" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
